--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,6 +43,7 @@ jobs:
     env:
       RUST_LOG: info
       RUST_LOG_SPAN_EVENTS: close
+      AWS_DEFAULT_REGION: us-east-1
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@nightly
@@ -65,6 +66,7 @@ jobs:
     env:
       RUST_LOG: info
       RUST_LOG_SPAN_EVENTS: close
+      AWS_DEFAULT_REGION: us-east-1
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
