--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           components: clippy
       - uses: Swatinem/rust-cache@v2
-      - run: cargo clippy --all-targets --all-features
+      - run: cargo clippy --workspace --all-targets --all-features
 
   test-min:
     name: Test Minimal Versions
@@ -49,8 +49,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
       - uses: Swatinem/rust-cache@v2
       - uses: taiki-e/install-action@nextest
-      - run: cargo nextest run --no-fail-fast --all-features --run-ignored all -Zminimal-versions
-      - run: cargo test --doc --no-fail-fast --all-features -Zminimal-versions
+      - run: cargo nextest run --workspace --no-fail-fast --all-features --run-ignored all -Zminimal-versions
+      - run: cargo test  --workspace --doc --no-fail-fast --all-features -Zminimal-versions
 
   test:
     name: Test
@@ -72,8 +72,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
       - uses: taiki-e/install-action@nextest
-      - run: cargo nextest run --no-fail-fast --all-features --run-ignored all
-      - run: cargo test --doc --no-fail-fast --all-features
+      - run: cargo nextest run --workspace --no-fail-fast --all-features --run-ignored all
+      - run: cargo test --workspace --doc --no-fail-fast --all-features
 
   deny:
     name: Check Constraints
