--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "modyne"
 version = "0.1.0"
 authors = ["Marcus Griep <marcus@griep.us>"]
 description = "High-level crate for interacting with single-table DynamoDB instances"
+readme = "./README.md"
 keywords = ["dynamodb","aws","aws-sdk","dynamo","orm"]
 categories = ["database","api-bindings"]
 documentation = "https://docs.rs/modyne"
@@ -10,8 +11,11 @@ homepage = "https://github.com/neoeinstein/modyne"
 repository = "https://github.com/neoeinstein/modyne"
 license = "MIT OR Apache-2.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+include = [
+    "src",
+    "README.md",
+    "CHANGELOG.md"
+]
 
 [dependencies]
 aliri_braid = "0.4.0"
@@ -27,14 +31,10 @@ time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
 tokio = { version = "1.0", features = ["sync"] }
 tracing = "0.1.36"
 
-[dev-dependencies]
-aws-credential-types = "0.55.3"
-castaway = "0.2.1"
-compact_str = { version = "0.7.0", features = ["serde"] }
-futures = "0.3.27"
-pin-project-lite = "0.2.9"
-svix-ksuid = { version = "0.7.0", features = ["serde"] }
-test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
-tokio = { version = "1.0", features = ["macros"] }
-tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
-uuid = { version = "1.3.0", features = ["v4", "serde"] }
+[workspace]
+members = [
+    "./dynamodb-book/ch18-sessionstore",
+    "./dynamodb-book/ch19-ecomm",
+    "./dynamodb-book/ch20-bigtimedeals",
+    "./dynamodb-book/ch21-github",
+]
