--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ homepage = "https://github.com/neoeinstein/modyne"
 repository = "https://github.com/neoeinstein/modyne"
 license = "MIT OR Apache-2.0"
 edition = "2021"
+rust-version = "1.70.0"
 include = [
     "/docs",
     "/src",
@@ -31,7 +32,6 @@ aws-config = "0.55.3"
 aws-sdk-dynamodb = "0.28.0"
 fnv = "1.0.7"
 modyne-derive = { version = "=0.1.0", optional = true, path = "./modyne-derive" }
-once_cell = "1.17.1"
 serde = { version = "1.0.158", features = ["derive"] }
 serde_dynamo = { version = "4.2.3", features = ["aws-sdk-dynamodb+0_28"] }
 thiserror = "1.0.38"
