--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,17 @@ include = [
     "CHANGELOG.md"
 ]
 
+[features]
+default = []
+derive = ["dep:modyne-derive"]
+
 [dependencies]
 aliri_braid = "0.4.0"
 async-trait = "0.1.66"
 aws-config = "0.55.3"
 aws-sdk-dynamodb = "0.28.0"
 fnv = "1.0.7"
+modyne-derive = { version = "=0.1.0", optional = true, path = "./modyne-derive" }
 once_cell = "1.17.1"
 serde = { version = "1.0.158", features = ["derive"] }
 serde_dynamo = { version = "4.2.3", features = ["aws-sdk-dynamodb+0_28"] }
@@ -30,6 +35,9 @@ thiserror = "1.0.38"
 time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
 tokio = { version = "1.0", features = ["sync"] }
 tracing = "0.1.36"
+
+[package.metadata.docs.rs]
+features = ["derive"]
 
 [workspace]
 members = [
