--- a/dynamodb-book/ch18-sessionstore/Cargo.toml
+++ b/dynamodb-book/ch18-sessionstore/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 [dependencies]
 aliri_braid = "0.4.0"
 aws-sdk-dynamodb = "0.28.0"
-modyne = { path = "../.." }
+modyne = { path = "../..", features = ["derive"] }
 serde = { version = "1.0.158", features = ["derive"] }
 time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
 tokio = { version = "1.0" }
