--- a/dynamodb-book/ch20-bigtimedeals/Cargo.toml
+++ b/dynamodb-book/ch20-bigtimedeals/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 aliri_braid = "0.4.0"
 aws-sdk-dynamodb = "0.28.0"
 futures = "0.3.27"
-modyne = { path = "../.." }
+modyne = { path = "../..", features = ["derive"] }
 once_cell = "1.17.1"
 pin-project-lite = "0.2.9"
 serde = { version = "1.0.158", features = ["derive"] }
