--- a/dynamodb-book/ch19-ecomm/Cargo.toml
+++ b/dynamodb-book/ch19-ecomm/Cargo.toml
@@ -2,14 +2,19 @@
 name = "dynamodb-book-ch19-ecomm"
 version = "0.1.0"
 edition = "2021"
-publish = false
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Marcus Griep <marcus@griep.us>"]
+description = "Models from The DynamoDB Book ECommerce example"
+keywords = ["dynamodb","aws","aws-sdk","dynamo","orm"]
+categories = ["database","api-bindings"]
+documentation = "https://docs.rs/dynamodb-book-ch19-ecomm"
+homepage = "https://github.com/neoeinstein/modyne"
+repository = "https://github.com/neoeinstein/modyne"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 aliri_braid = "0.4.0"
 aws-sdk-dynamodb = "0.28.0"
-modyne = { path = "../..", features = ["derive"] }
+modyne = { version = "0.1.0", path = "../..", features = ["derive"] }
 serde = { version = "1.0.158", features = ["derive"] }
 svix-ksuid = { version = "0.7.0", features = ["serde"] }
 time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
