--- a/dynamodb-book/ch20-bigtimedeals/Cargo.toml
+++ b/dynamodb-book/ch20-bigtimedeals/Cargo.toml
@@ -2,15 +2,20 @@
 name = "dynamodb-book-ch20-bigtimedeals"
 version = "0.1.0"
 edition = "2021"
-publish = false
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Marcus Griep <marcus@griep.us>"]
+description = "Models from The DynamoDB Book Big Time Deals example"
+keywords = ["dynamodb","aws","aws-sdk","dynamo","orm"]
+categories = ["database","api-bindings"]
+documentation = "https://docs.rs/dynamodb-book-ch20-bigtimedeals"
+homepage = "https://github.com/neoeinstein/modyne"
+repository = "https://github.com/neoeinstein/modyne"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 aliri_braid = "0.4.0"
 aws-sdk-dynamodb = "0.28.0"
 futures = "0.3.27"
-modyne = { path = "../..", features = ["derive"] }
+modyne = { version = "0.1.0", path = "../..", features = ["derive"] }
 once_cell = "1.17.1"
 pin-project-lite = "0.2.9"
 serde = { version = "1.0.158", features = ["derive"] }
