--- a/dynamodb-book/ch21-github/Cargo.toml
+++ b/dynamodb-book/ch21-github/Cargo.toml
@@ -2,16 +2,22 @@
 name = "dynamodb-book-ch21-github"
 version = "0.1.0"
 edition = "2021"
-publish = false
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Marcus Griep <marcus@griep.us>"]
+description = "Models from The DynamoDB Book GitHub example"
+keywords = ["dynamodb","aws","aws-sdk","dynamo","orm"]
+categories = ["database","api-bindings"]
+readme = "README.md"
+documentation = "https://docs.rs/dynamodb-book-ch21-github"
+homepage = "https://github.com/neoeinstein/modyne"
+repository = "https://github.com/neoeinstein/modyne"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 aliri_braid = "0.4.0"
 aws-sdk-dynamodb = "0.28.0"
 castaway = "0.2.1"
 compact_str = { version = "0.7.0", features = ["serde"] }
-modyne = { path = "../..", features = ["derive"] }
+modyne = { version = "0.1.0", path = "../..", features = ["derive"] }
 serde = { version = "1.0.158", features = ["derive"] }
 serde_dynamo = "4.2.3"
 svix-ksuid = { version = "0.7.0", features = ["serde"] }
