feat: 📌 allow MSRV as low as 1.66.1 with once_cell feature

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           components: clippy
       - uses: Swatinem/rust-cache@v2
-      - run: cargo clippy --workspace --all-targets --all-features
+      - run: cargo clippy --workspace --all-targets --features derive
 
   test-min:
     name: Test Minimal Versions
@@ -49,8 +49,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
       - uses: Swatinem/rust-cache@v2
       - uses: taiki-e/install-action@nextest
-      - run: cargo nextest run --workspace --no-fail-fast --all-features --run-ignored all -Zminimal-versions
-      - run: cargo test  --workspace --doc --no-fail-fast --all-features -Zminimal-versions
+      - run: cargo nextest run --workspace --no-fail-fast --features derive --run-ignored all -Zminimal-versions
+      - run: cargo test  --workspace --doc --no-fail-fast --features derive -Zminimal-versions
 
 
   test-msrv:
@@ -70,11 +70,11 @@ jobs:
       AWS_DEFAULT_REGION: us-east-1
     steps:
       - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@1.70.0
+      - uses: dtolnay/rust-toolchain@1.66.1
       - uses: Swatinem/rust-cache@v2
       - uses: taiki-e/install-action@nextest
-      - run: cargo nextest run --workspace --no-fail-fast --all-features --run-ignored all
-      - run: cargo test --workspace --doc --no-fail-fast --all-features
+      - run: cargo nextest run --workspace --no-fail-fast --features derive,once_cell --run-ignored all
+      - run: cargo test --workspace --doc --no-fail-fast --features derive,once_cell
 
   test:
     name: Test
@@ -96,8 +96,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
       - uses: taiki-e/install-action@nextest
-      - run: cargo nextest run --workspace --no-fail-fast --all-features --run-ignored all
-      - run: cargo test --workspace --doc --no-fail-fast --all-features
+      - run: cargo nextest run --workspace --no-fail-fast --features derive --run-ignored all
+      - run: cargo test --workspace --doc --no-fail-fast --features derive
 
   deny:
     name: Check Constraints
