--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ homepage = "https://github.com/neoeinstein/modyne"
 repository = "https://github.com/neoeinstein/modyne"
 license = "MIT OR Apache-2.0"
 edition = "2021"
-rust-version = "1.70.0"
+rust-version = "1.66.1"
 include = [
     "/docs",
     "/src",
@@ -24,6 +24,7 @@ include = [
 [features]
 default = []
 derive = ["dep:modyne-derive"]
+once_cell = ["dep:once_cell"]
 
 [dependencies]
 aliri_braid = "0.4.0"
@@ -32,6 +33,7 @@ aws-config = "0.55.3"
 aws-sdk-dynamodb = "0.28.0"
 fnv = "1.0.7"
 modyne-derive = { version = "=0.1.0", optional = true, path = "./modyne-derive" }
+once_cell = { version = "1.17.2", optional = true }
 serde = { version = "1.0.158", features = ["derive"] }
 serde_dynamo = { version = "4.2.3", features = ["aws-sdk-dynamodb+0_28"] }
 thiserror = "1.0.38"
