--- a/dynamodb-book/ch19-ecomm/Cargo.toml
+++ b/dynamodb-book/ch19-ecomm/Cargo.toml
@@ -10,6 +10,11 @@ documentation = "https://docs.rs/dynamodb-book-ch19-ecomm"
 homepage = "https://github.com/neoeinstein/modyne"
 repository = "https://github.com/neoeinstein/modyne"
 license = "MIT OR Apache-2.0"
+rust-version = "1.66.1"
+
+[features]
+default = []
+once_cell = ["modyne/once_cell"]
 
 [dependencies]
 aliri_braid = "0.4.0"
