--- a/dynamodb-book/ch20-bigtimedeals/Cargo.toml
+++ b/dynamodb-book/ch20-bigtimedeals/Cargo.toml
@@ -10,12 +10,18 @@ documentation = "https://docs.rs/dynamodb-book-ch20-bigtimedeals"
 homepage = "https://github.com/neoeinstein/modyne"
 repository = "https://github.com/neoeinstein/modyne"
 license = "MIT OR Apache-2.0"
+rust-version = "1.66.1"
+
+[features]
+default = []
+once_cell = ["dep:once_cell", "modyne/once_cell"]
 
 [dependencies]
 aliri_braid = "0.4.0"
 aws-sdk-dynamodb = "0.28.0"
 futures = "0.3.27"
 modyne = { version = "0.1.0", path = "../..", features = ["derive"] }
+once_cell = { version = "1.17.2", optional = true }
 pin-project-lite = "0.2.9"
 serde = { version = "1.0.158", features = ["derive"] }
 serde_dynamo = "4.2.3"
