--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ homepage = "https://github.com/neoeinstein/modyne"
 repository = "https://github.com/neoeinstein/modyne"
 license = "MIT OR Apache-2.0"
 edition = "2021"
-rust-version = "1.68.0"
+rust-version = "1.71.0"
 include = [
     "/docs",
     "/src",
@@ -24,7 +24,7 @@ include = [
 [features]
 default = []
 derive = ["dep:modyne-derive"]
-once_cell = ["dep:once_cell"]
+once_cell = []
 
 [dependencies]
 aliri_braid = "0.4.0"
@@ -33,7 +33,6 @@ aws-config = "1.0.1"
 aws-sdk-dynamodb = "1.3.0"
 fnv = "1.0.7"
 modyne-derive = { version = "=0.3.0", optional = true, path = "./modyne-derive" }
-once_cell = { version = "1.17.2", optional = true }
 serde = { version = "1.0.158", features = ["derive"] }
 serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
 thiserror = "1.0.38"
