--- a/dynamodb-book/ch20-bigtimedeals/Cargo.toml
+++ b/dynamodb-book/ch20-bigtimedeals/Cargo.toml
@@ -10,18 +10,17 @@ documentation = "https://docs.rs/dynamodb-book-ch20-bigtimedeals"
 homepage = "https://github.com/neoeinstein/modyne"
 repository = "https://github.com/neoeinstein/modyne"
 license = "MIT OR Apache-2.0"
-rust-version = "1.68.0"
+rust-version = "1.71.0"
 
 [features]
 default = []
-once_cell = ["dep:once_cell", "modyne/once_cell"]
+once_cell = []
 
 [dependencies]
 aliri_braid = "0.4.0"
 aws-sdk-dynamodb = "1.3.0"
 futures = "0.3.27"
 modyne = { version = "0.3.0", path = "../..", features = ["derive"] }
-once_cell = { version = "1.17.2", optional = true }
 pin-project-lite = "0.2.9"
 serde = { version = "1.0.158", features = ["derive"] }
 serde_dynamo = "4.2.3"
