--- a/dynamodb-book/ch21-github/Cargo.toml
+++ b/dynamodb-book/ch21-github/Cargo.toml
@@ -11,11 +11,11 @@ documentation = "https://docs.rs/dynamodb-book-ch21-github"
 homepage = "https://github.com/neoeinstein/modyne"
 repository = "https://github.com/neoeinstein/modyne"
 license = "MIT OR Apache-2.0"
-rust-version = "1.68.0"
+rust-version = "1.71.0"
 
 [features]
 default = []
-once_cell = ["modyne/once_cell"]
+once_cell = []
 
 [dependencies]
 aliri_braid = "0.4.0"
