--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ async-trait = "0.1.66"
 aws-config = "1.0.1"
 aws-sdk-dynamodb = "1.3.0"
 fnv = "1.0.7"
-modyne-derive = { version = "=0.3.0", optional = true, path = "./modyne-derive" }
+modyne-derive = { version = "=0.3.0", optional = true, path = "modyne-derive" }
 serde = { version = "1.0.158", features = ["derive"] }
 serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
 thiserror = "1.0.38"
@@ -45,8 +45,9 @@ features = ["derive"]
 
 [workspace]
 members = [
-    "./dynamodb-book/ch18-sessionstore",
-    "./dynamodb-book/ch19-ecomm",
-    "./dynamodb-book/ch20-bigtimedeals",
-    "./dynamodb-book/ch21-github",
+    "modyne-derive",
+    "dynamodb-book/ch18-sessionstore",
+    "dynamodb-book/ch19-ecomm",
+    "dynamodb-book/ch20-bigtimedeals",
+    "dynamodb-book/ch21-github",
 ]
