refactor: reorganize repository

--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,5 +1,5 @@
 {
-  ".": "0.3.0",
+  "modyne": "0.3.0",
   "modyne-derive": "0.3.0",
   "dynamodb-book/ch18-sessionstore": "0.3.0",
   "dynamodb-book/ch19-ecomm": "0.3.0",
