--- a/dynamodb-book/ch18-sessionstore/Cargo.toml
+++ b/dynamodb-book/ch18-sessionstore/Cargo.toml
@@ -19,7 +19,7 @@ once_cell = []
 [dependencies]
 aliri_braid = "0.4.0"
 aws-sdk-dynamodb = "1.3.0"
-modyne = { version = "0.3.0", path = "../..", features = ["derive"] }
+modyne = { version = "0.3.0", path = "../../modyne", features = ["derive"] }
 serde = { version = "1.0.158", features = ["derive"] }
 time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
 tokio = { version = "1.37" }
