--- a/modyne/Cargo.toml
+++ b/modyne/Cargo.toml
@@ -24,7 +24,7 @@ async-trait = "0.1.66"
 aws-config = "1.0.1"
 aws-sdk-dynamodb = "1.3.0"
 fnv = "1.0.7"
-modyne-derive = { version = "=0.3.0", optional = true, path = "../modyne-derive" }
+modyne-derive = { version = "0.3.0", optional = true, path = "../modyne-derive" }
 serde = { version = "1.0.158", features = ["derive"] }
 serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
 thiserror = "1.0.38"
