--- a/modyne/Cargo.toml
+++ b/modyne/Cargo.toml
@@ -24,13 +24,21 @@ async-trait = "0.1.66"
 aws-config = "1.0.1"
 aws-sdk-dynamodb = "1.3.0"
 fnv = "1.0.7"
-modyne-derive = { version = "0.3.0", optional = true, path = "../modyne-derive" }
+modyne-derive = { version = "0.3", optional = true, path = "../modyne-derive" }
 serde = { version = "1.0.158", features = ["derive"] }
 serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
 thiserror = "1.0.38"
 time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
 tokio = { version = "1.37", features = ["sync"] }
 tracing = "0.1.36"
+
+# This cfg cannot be enabled, but it still forces Cargo to keep modyne_derive's
+# version in lockstep with modyne's, even if someone depends on the two crates
+# separately with modyne's "derive" feature disabled. Every modyne_derive release
+# is compatible with exactly one modyne release because the generated code
+# involves nonpublic APIs which are not bound by semver.
+[target.'cfg(any())'.dependencies]
+modyne-derive = { version = "=0.3.0", path = "../modyne-derive" }
 
 [package.metadata.docs.rs]
 features = ["derive"]
