--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,12 +17,14 @@ jobs:
         uses: google-github-actions/release-please-action@a37ac6e4f6449ce8b3f7607e4d97d0146028dc0b # v4
         with:
           token: ${{ secrets.RELEASE_PLEASE_PAT }}
-      - run: echo ${{ toJson(steps.release-please.outputs) }} | jq
+      - run: echo '${{ toJson(steps.release-please.outputs) }}' | jq
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+        if: steps.release-please.outputs.prs_created == 'true'
         with:
           token: ${{ secrets.RELEASE_PLEASE_PAT }}
           ref: ${{ fromJson(steps.release-please.outputs.pr).baseBranchName }}
       - name: Fix up versions
+        if: steps.release-please.outputs.prs_created == 'true'
         run: |
           sed --in-place --regexp-extended \
             -e '/^\[dependencies\]$/,/^\[/s/modyne-derive = \{ version = "([[:digit:]]+\.[[:digit:]]+)(\.[[:digit:]]+)?"/modyne-derive = { version = "\1"/'
@@ -30,6 +32,7 @@ jobs:
             modyne/Cargo.toml
         shell: bash
       - uses: devops-infra/action-commit-push@v0.9.2
+        if: steps.release-please.outputs.prs_created == 'true'
         with:
           github_token: "${{ secrets.RELEASE_PLEASE_PAT }}"
           amend: true
