--- a/modyne/Cargo.toml
+++ b/modyne/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modyne"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Marcus Griep <marcus@griep.us>"]
 description = "High-level crate for interacting with single-table DynamoDB instances"
 readme = "../README.md"
@@ -24,7 +24,7 @@ async-trait = "0.1.66"
 aws-config = "1.0.1"
 aws-sdk-dynamodb = "1.3.0"
 fnv = "1.0.7"
-modyne-derive = { version = "0.3", optional = true, path = "../modyne-derive" }
+modyne-derive = { version = "0.3.1", optional = true, path = "../modyne-derive" }
 serde = { version = "1.0.158", features = ["derive"] }
 serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
 thiserror = "1.0.38"
@@ -38,7 +38,7 @@ tracing = "0.1.36"
 # is compatible with exactly one modyne release because the generated code
 # involves nonpublic APIs which are not bound by semver.
 [target.'cfg(any())'.dependencies]
-modyne-derive = { version = "=0.3.0", path = "../modyne-derive" }
+modyne-derive = { version = "0.3.1", path = "../modyne-derive" }
 
 [package.metadata.docs.rs]
 features = ["derive"]
