build: pin deps

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -31,7 +31,7 @@ jobs:
             -e '/\.dependencies\]$/,/^$/s/modyne-derive = \{ version = "=?([[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+)"/modyne-derive = { version = "=\1"/' \
             modyne/Cargo.toml
         shell: bash
-      - uses: stefanzweifel/git-auto-commit-action@v5
+      - uses: stefanzweifel/git-auto-commit-action@8621497c8c39c72f3e2a999a26b4ca1b5058a842 # v5
         if: steps.release-please.outputs.prs_created == 'true'
         with:
           file_pattern: modyne/Cargo.toml
